--- a/yolov3/yolov3/Base.lproj/Main.storyboard
+++ b/yolov3/yolov3/Base.lproj/Main.storyboard
@@ -166,23 +166,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ziY-7k-2Nc">
-                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="phW-RL-mxV">
-                                <rect key="frame" x="164" y="681" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="phW-RL-mxV">
+                                <rect key="frame" x="164" y="681" width="47" height="30"/>
                                 <state key="normal" title="Detect"/>
                                 <connections>
                                     <action selector="processImage" destination="nHS-8v-nIf" eventType="touchUpInside" id="mJy-yz-T20"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ziY-7k-2Nc">
+                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ziY-7k-2Nc" firstAttribute="leading" secondItem="XWJ-00-1fT" secondAttribute="leading" id="CRF-jO-PBr"/>
                             <constraint firstItem="XWJ-00-1fT" firstAttribute="trailing" secondItem="ziY-7k-2Nc" secondAttribute="trailing" id="FVW-x7-4x9"/>
                             <constraint firstItem="ziY-7k-2Nc" firstAttribute="top" secondItem="XWJ-00-1fT" secondAttribute="top" id="FpI-tA-nM0"/>
+                            <constraint firstItem="phW-RL-mxV" firstAttribute="top" secondItem="XWJ-00-1fT" secondAttribute="top" constant="593" id="Nyb-Pa-8V9"/>
+                            <constraint firstItem="phW-RL-mxV" firstAttribute="centerX" secondItem="ziY-7k-2Nc" secondAttribute="centerX" id="Oau-WX-P18"/>
+                            <constraint firstItem="phW-RL-mxV" firstAttribute="leading" secondItem="XWJ-00-1fT" secondAttribute="leading" constant="164" id="c0z-qc-PN9"/>
                             <constraint firstItem="XWJ-00-1fT" firstAttribute="bottom" secondItem="ziY-7k-2Nc" secondAttribute="bottom" id="xVn-CR-VV6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XWJ-00-1fT"/>
@@ -295,7 +297,21 @@
                     <view key="view" contentMode="scaleToFill" id="PQh-VF-WRA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jm6-4N-YUZ">
+                                <rect key="frame" x="164" y="633" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="takeOffTapped:" destination="E1b-zd-avz" eventType="touchUpInside" id="nZf-wV-QfY"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jm6-4N-YUZ" firstAttribute="leading" secondItem="Vsz-tj-pxE" secondAttribute="leading" constant="164" id="40d-Un-h7k"/>
+                            <constraint firstItem="jm6-4N-YUZ" firstAttribute="top" secondItem="Vsz-tj-pxE" secondAttribute="top" constant="589" id="Fh4-w1-jlo"/>
+                            <constraint firstItem="Vsz-tj-pxE" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jm6-4N-YUZ" secondAttribute="trailing" symbolic="YES" id="pS0-8h-DLz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Vsz-tj-pxE"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Drone" id="taj-pM-jxl"/>
