Update online preview to increase object appearenc
hovewer there is still issues for appearence for video preview. it's recommender to refactor online mthod

Co-authored-by: Dmytro Kushnir <dimakush1@gmail.com>

--- a/yolo_tcar/yolo_tcar/Main.storyboard
+++ b/yolo_tcar/yolo_tcar/Main.storyboard
@@ -235,8 +235,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faX-Tu-X9z">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="faX-Tu-X9z">
+                                <rect key="frame" x="0.0" y="0.0" width="412" height="812"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eXp-PP-bhr">
